# retrieval-website

./: .env.example  .gitignore  README.md  gatsby-browser.js  gatsby-config.js  gatsby-node.js  gatsby-node.ts  jest.config.js  netlify.toml  package-lock.json  package.json  tailwind.config.js  tsconfig.json
.github/workflows/: periodic-netlify-build.yml
cms/: .dockerignore  .env.example  Dockerfile  package.json
cms/config/: api.js  database.js  plugins.js  server.js
cms/scripts/: deploy.sh
cms/src/admin/: app.js
frontend/: .gitignore  gatsby-config.js  next.config.js  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/[date]/: page.tsx
frontend/app/components/: calendar-month.tsx
frontend/app/lib/: custom-types.ts  fetch-data-heatmap.ts  fetch-measurement-data.ts
frontend/src/: types.ts
frontend/src/pages/: 404.tsx  index.tsx
frontend/src/templates/: plot.tsx
old-frontend/: package.json  tailwind.config.js
src/: types.ts
src/assets/: icons.tsx
src/components/: date-grid.tsx  filter-bar.tsx
src/pages/: 404.js  hamburg.tsx  index.js  index.tsx
src/styles/: global.css  plot-elements.scss  tailwind.css
src/templates/: plot.js  plot.tsx
src/utilities/: backend.ts  colors.ts  constants.ts
src/utils/: build-flag-data.ts  build-timeseries-data.ts  constants.ts  generate-day-object.test.ts  generate-day-object.ts  get-day-object-from-string.ts
upload-client/: .gitignore  config.template.json  pyproject.toml  run.py  upload_retrieval_data.py
upload-client/src/: __init__.py  config.py  data.py  pocketbase.py  utils.py
(+36 files in other folders)
