[tool.poetry]
name = "upload-retrieval-outputs"
version = "0.1.0"
description = ""
authors = ["Moritz Makowski <moritz@dostuffthatmatters.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.*"
tum-esm-utils = "^1.5.2"
polars = "^0.17.15"
pydantic = "^1.10.8"
requests = "^2.31.0"
rich = "^13.3.5"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
mypy = "^1.3.0"
types-requests = "^2.31.0.1"

[tool.mypy]
strict = true
implicit_reexport = true
no_warn_unused_ignores = true
plugins = ["pydantic.mypy"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
